--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple webpack starter-kit for web development.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "dev": "cross-env NODE_ENV=development && node dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,16 @@
     "tree",
     "shaking"
   ],
-  "author": "socarlosb",
+  "author": "Carlos Barbosa (@socarlosb)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/socarlosb/simple-webpack-starter-kit/issues"
   },
-  "homepage": "https://github.com/socarlosb/simple-webpack-starter-kit#readme"
+  "homepage": "https://github.com/socarlosb/simple-webpack-starter-kit#readme",
+  "devDependencies": {
+    "cross-env": "^5.1.1",
+    "rimraf": "^2.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
+  }
 }
