--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple webpack starter-kit for web development.",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
-    "dev": "cross-env NODE_ENV=development && node dev-server.js"
+    "build": "rimraf dist && set NODE_ENV=production&& webpack",
+    "dev": "set NODE_ENV=development&& node dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -30,8 +30,15 @@
   },
   "homepage": "https://github.com/socarlosb/simple-webpack-starter-kit#readme",
   "devDependencies": {
-    "cross-env": "^5.1.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.1.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
