--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "node-sass": "^4.7.2",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
