--- a/package.json
+++ b/package.json
@@ -1,48 +1,31 @@
 {
-  "name": "simple-webpack-starter-kit",
+  "name": "simple-webpack-starter-kit2",
   "version": "1.0.0",
-  "description": "A simple webpack starter-kit for web development.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && set NODE_ENV=production&& webpack",
-    "dev": "set NODE_ENV=development&& node dev-server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server",
+    "build": "webpack -p"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/socarlosb/simple-webpack-starter-kit.git"
-  },
-  "keywords": [
-    "simple",
-    "webpack",
-    "html",
-    "scss",
-    "javascript",
-    "import",
-    "es6",
-    "minify",
-    "tree",
-    "shaking"
-  ],
-  "author": "Carlos Barbosa (@socarlosb)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/socarlosb/simple-webpack-starter-kit/issues"
-  },
-  "homepage": "https://github.com/socarlosb/simple-webpack-starter-kit#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.7.2",
-    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
-    "scss-loader": "0.0.1",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
-    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
